# SASSARO_ManiglioEIlPiuBelloDelMondo

./: CMakeLists.txt  EsercizioCinque.c  EsercizioCinque.h  EsercizioDieci.c  EsercizioDieci.h  EsercizioDodici.c  EsercizioDodici.h  EsercizioDue.c  EsercizioDue.h  EsercizioNove.c  EsercizioNove.h  EsercizioOtto.c  EsercizioOtto.h  EsercizioQuattordici.c  EsercizioQuattordici.h  EsercizioQuattro.c  EsercizioQuattro.h  EsercizioSei.c  EsercizioSei.h  EsercizioSette.c  EsercizioSette.h  EsercizioTre.c  EsercizioTre.h  EsercizioTredici.c  EsercizioTredici.h  EsercizioUndici.c  EsercizioUndici.h  EsercizioUno.c  EsercizioUno.h  main.c
